# esp32_lvgl

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/gyro/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/i2c/: CMakeLists.txt  i2c_driver.c  i2c_driver.h
components/i2c/include/: i2c_driver.h
components/i2c/src/: i2c_driver.c
components/joystick/: CMakeLists.txt  joystick_driver.c
components/joystick/include/: joystick_driver.h
components/joystick/src/: joystick_driver.c
components/lcd/: lcd_driver.c  lcd_driver.h
components/lcd/include/: lcd_driver.h
components/lcd/src/: lcd_driver.c
components/led/: CMakeLists.txt  led_driver.c  led_driver.h
components/led/include/: led_driver.h
components/led/src/: led_driver.c
components/lvgl/: CMakeLists.txt  lv_conf.h  lvgl.h  lvgl.mk
components/lvgl-8.3.3/: CMakeLists.txt
components/lvgl/porting/: lv_port_disp.c  lv_port_disp.h
components/shell/: CMakeLists.txt  shell.c  shell.h  shell_color.h
components/shell/include/: shell.h  shellTask.h
components/shell/src/: shell.c
components/spi/: spi_driver.c  spi_driver.h
components/spi/include/: spi_driver.h
components/spi/src/: spi_driver.c
components/tft/src/: st7789.c
components/timer/: timer.c  timer.h
components/uart/: CMakeLists.txt  uart_driver.c
components/uart/include/: uart_driver.h
components/uart/src/: uart_driver.c
components/ui/: CMakeLists.txt
components/ui/image/: image_background.c  image_instrument_profile.c
components/ui/src/: ui_main.c  ui_main.h
main/: CMakeLists.txt  esp32_lvgl.c  global.h  ledTask.c  main.c  shellTask.c
main/include/: global.h  ledTask.h  shellTask.h  shellTask1.h
main/src/: main.c
